# line-messaging-api-rust

./: .gitignore  Cargo.toml
src/: actions.rs  bot.rs  events.rs  messages.rs  templates.rs  utils.rs
src/flex_message/: component_builder.rs  components.rs  containers.rs
tests/: common.rs  events_test.rs  integration_test.rs  lib.rs  messages_test.rs  utils_test.rs
tests/common/: mod.rs
tests/events_test/: mod.rs
tests/flex_message_test/: component_builder_test.rs  containers_test.rs  mod.rs  styles_test.rs
