[package]
name = "line-messaging-api-rust"
version = "0.1.4"
authors = ["hota <hota822@gmail.com>"]
edition = "2018"

license = "MIT"
description = "LINE Messaging API Wrapper in Rust"
# repository = "https://github.com/hota822/line-messaging-api-rust"
#  forked form = "https://github.com/uma0317/line-messaging-api-rust"

[dependencies]
# line-messaging-api-rust = { path = "../line-messaging-api-rust" }
# line-messaging-api-rust = { git = "https://github.com/hota822/line-messaging-api-rust" }
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = "0.5"
base64 = "0.12.1"
hmac = "0.7.1"
sha2 = "0.8.2"